2005-03-29  Dan Williams <dcbw@redhat.com>

	* src/NetworkManagerDevice.c
		- Use iw_get_ext() where we should rather than iw_set_ext()

2005-03-29  Dan Williams <dcbw@redhat.com>

	* src/NetworkManagerDevice.c
		- (nm_device_set_up_down): remove check for unsupported devices
			that caused NM to not bring devices up when they were
			added to the device list.

2005-03-28  Dan Williams <dcbw@redhat.com>

	Driver Notification patch: notifies the user when their driver
		sucks.  Gives them the option to ignore further insertions
		of the card that has the sucky driver.

	* NetworkManager.h
		- Remove the SEMI_SUPPORTED member from the NMDriverSupportLevel
			enum and replace it with NO_CARRIER_DETECT and
			NO_WIRELESS_SCAN

	* panel-applet/NMWirelessApplet.[ch]
		- Merge essid.glade -> wireless-applet.glade
		- Implement the "Your driver sucks" notification dialog

	* panel-applet/NMWirelessAppletDbus.c
		- Change stuff from getSupportsCarrierDetect->getDriverSupportLevel
		- Grab hardware address for each device from NM too
		- Check whether the driver for each device sucks or not whenever
			a new device is noticed

	* panel-applet/NMWirelessAppletOtherNetworkDialog.c
		- Deal with stuff being in wireless-applet.glade now rather than essid.glade

	* src/NetworkManager.c
		- Fix a double-unref on device removal

	* src/NetworkManagerUtils.c
		- Set appropriate driver support level on a device that doesn't
			support scanning or carrier detection

	* src/nm-dbus-device.c
		- New "getHWAddress" dbus method on devices
		- getSupportsCarrierDetect -> getDriverSupportLevel

2005-03-28  Dan Williams <dcbw@redhat.com>

	Merge sleep functionality from HEAD

	* panel-applet/NMWirelessApplet.c
		- Applet now sticks around when there is no connection
		- Hook up the "Stop/Start all wireless devices" function

	* src/NetworkManager.c
		- Don't perform wireless link state updates when asleep or
			when wireless devices are stopped

	* src/NetworkManagerDbus.c